# Plans_app

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  todo_app_full_srs_flutter_rust.md
.github/workflows/: release.yml
plans_app/: README.md  SESSION_SUMMARY.md  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  pubspec.yaml  run_linux.sh  run_macos.sh  run_windows.bat  run_windows.sh
plans_app/android/: .gitignore
plans_app/android/app/: build.gradle.kts  upload.keystore
plans_app/ios/Runner/: Info.plist
plans_app/ios/Runner.xcodeproj/: project.pbxproj
plans_app/ios/WidgetExtension/: Info.plist  PlansWidget.swift  PlansWidgetExtension.entitlements
plans_app/lib/: main.dart
plans_app/lib/routing/: app_router.dart
plans_app/lib/shell/: platform_shell.dart
plans_app/lib/theme/: app_animations.dart  app_spacing.dart  app_theme.dart  app_typography.dart
plans_app/linux/: CMakeLists.txt
plans_app/linux/runner/: my_application.cc
plans_app/macos/Flutter/: GeneratedPluginRegistrant.swift
plans_app/macos/Runner/: AppDelegate.swift  Info.plist
plans_app/macos/Runner.xcodeproj/: project.pbxproj
plans_app/rust/: Cargo.toml  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.bat  build_windows.sh
plans_app/rust/src/: db.rs  frb_generated.rs  lib.rs  models.rs  sync.rs
plans_app/rust/src/api/: mod.rs  projects.rs  sync.rs  tasks.rs
plans_app/test/: widget_test.dart
plans_app/test/providers/: project_provider_test.dart  (+1 more)
plans_app/web/: index.html  manifest.json
plans_app/windows/: CMakeLists.txt
(+80 files in other folders)
